completed rec_track_chcker

--- a/rec_track_checker.ipynb
+++ b/rec_track_checker.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -74,8 +74,8 @@
      "output_type": "stream",
      "text": [
       "MB_track loaded\n",
-      "CPU times: user 9.98 s, sys: 3.81 s, total: 13.8 s\n",
-      "Wall time: 26.6 s\n"
+      "CPU times: user 13.2 s, sys: 3.33 s, total: 16.5 s\n",
+      "Wall time: 29.4 s\n"
      ]
     },
     {
@@ -136,7 +136,7 @@
        "4  e56c6d3c-09cf-33a0-81c5-ceade77c35dc"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -168,8 +168,8 @@
      "output_type": "stream",
      "text": [
       "MB_track_redirects_old loaded\n",
-      "CPU times: user 146 ms, sys: 27.3 ms, total: 173 ms\n",
-      "Wall time: 345 ms\n"
+      "CPU times: user 141 ms, sys: 12.2 ms, total: 153 ms\n",
+      "Wall time: 346 ms\n"
      ]
     },
     {
@@ -230,7 +230,7 @@
        "4  13bee970-0129-320d-94c8-dfbc7748c692"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,15 +246,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.01 s, sys: 656 ms, total: 9.67 s\n",
-      "Wall time: 9.58 s\n"
+      "CPU times: user 10.6 s, sys: 693 ms, total: 11.3 s\n",
+      "Wall time: 11.2 s\n"
      ]
     }
    ],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,15 +298,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 72.3 ms, sys: 3.93 ms, total: 76.2 ms\n",
-      "Wall time: 74.5 ms\n"
+      "CPU times: user 77.6 ms, sys: 144 µs, total: 77.7 ms\n",
+      "Wall time: 76.1 ms\n"
      ]
     },
     {
@@ -462,7 +462,7 @@
        "[66125 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "5  a6c76014-bf81-3b15-adf5-c4175ea42c0b  42b91da5-1508-4d64-a40a-83597177c7e2  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -669,8 +669,8 @@
       "\n",
       "None \n",
       "\n",
-      "CPU times: user 15 ms, sys: 0 ns, total: 15 ms\n",
-      "Wall time: 14.3 ms\n"
+      "CPU times: user 12.1 ms, sys: 4 µs, total: 12.1 ms\n",
+      "Wall time: 11.8 ms\n"
      ]
     }
    ],
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,14 +711,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'logs': [['9b02977e-a03b-4a6b-a9a9-06e722bdcd7a', '43da7544-6283-3159-84f9-537fe823a1a7', 'd8abbf14-5945-3639-a0c9-3e9c70b1c0a4', '446b27ef-92fd-3ea1-ad0a-fe1055196406'], ['9b02977e-a03b-4a6b-a9a9-06e722bdcd7a', '43da7544-6283-3159-84f9-537fe823a1a7'], None], 'time_taken': [0.55, 0.55, 0.55], 'path': ['test_path', 'test_path', 'test_path'], 'timestamp': [7533943.827020003, 7533943.827115547, 7533943.827191365]}\n"
+      "{'time_taken': [0.55, 0.55, 0.55], 'logs': [['9b02977e-a03b-4a6b-a9a9-06e722bdcd7a', '43da7544-6283-3159-84f9-537fe823a1a7', 'd8abbf14-5945-3639-a0c9-3e9c70b1c0a4', '446b27ef-92fd-3ea1-ad0a-fe1055196406'], ['9b02977e-a03b-4a6b-a9a9-06e722bdcd7a', '43da7544-6283-3159-84f9-537fe823a1a7'], None], 'path': ['test_path', 'test_path', 'test_path'], 'timestamp': [8032034.156869547, 8032034.156947181, 8032034.157008521]}\n"
      ]
     }
    ],
@@ -757,15 +757,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 310 ms, sys: 7.89 ms, total: 318 ms\n",
-      "Wall time: 347 ms\n"
+      "CPU times: user 358 ms, sys: 2.88 ms, total: 361 ms\n",
+      "Wall time: 359 ms\n"
      ]
     }
    ],
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
        "[66125 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,15 +979,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 347 ms, sys: 3.9 ms, total: 351 ms\n",
-      "Wall time: 349 ms\n"
+      "CPU times: user 406 ms, sys: 0 ns, total: 406 ms\n",
+      "Wall time: 405 ms\n"
      ]
     },
     {
@@ -1143,7 +1143,7 @@
        "[66125 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,23 +1184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Writing files: 100%|██████████| 20/20 [00:04<00:00,  4.98Files/s]"
+      "Writing files: 100%|██████████| 1/1 [00:07<00:00,  7.64s/Files]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Time Taken:  4.023\n",
-      "CPU times: user 3.91 s, sys: 29.1 ms, total: 3.94 s\n",
-      "Wall time: 4.02 s\n"
+      "Total Time Taken:  7.641\n",
+      "CPU times: user 7.55 s, sys: 34.3 ms, total: 7.59 s\n",
+      "Wall time: 7.64 s\n"
      ]
     },
     {
@@ -1218,13 +1218,14 @@
     "    'logs': [],\n",
     "    'time_taken': [],\n",
     "    }\n",
-    "LOG_WRITE_PATH = \"/home/snaek/MLHD/rec_track_checker/MLHD/log.json\"\n",
+    "LOG_WRITE_PATH = \"/home/snaek/MLHD/rec_track_checker/log_positive.json\"\n",
     "LOG_EPOCH = 10\n",
     "\n",
     "file_counter = 0\n",
+    "MLHD_FILES = ['/data/mlhd/49/49dc8e61-67ca-4ad1-bf53-437856924777.txt.gz']\n",
     "\n",
     "master_start = monotonic()\n",
-    "for path in tqdm(MLHD_FILES[:20], desc=\"Writing files\", unit = 'Files'):\n",
+    "for path in tqdm(MLHD_FILES, desc=\"Writing files\", unit = 'Files'):\n",
     "    start = monotonic()\n",
     "    # Start Processing\n",
     "    df_loop = load_path(path)\n",
@@ -1251,14 +1252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "avg time taken per file:  0.2104\n",
+      "avg time taken per file:  7.635\n",
       "File Not None:  Series([], Name: logs, dtype: int64)\n"
      ]
     }
@@ -1267,6 +1268,15 @@
     "log_df = pd.DataFrame(output_log)\n",
     "print(\"avg time taken per file: \", log_df.time_taken.mean())\n",
     "print(\"File Not None: \", log_df.logs.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test_positive.to_csv('unk_ids/test_positive.csv.zst', index=False, sep='\\t', header=False, compression={'method': 'zstd', 'level': 10})"
    ]
   }
  ],
