renamed rec_track_checker.ipynb, minor updates for test_mapper.py

--- a/test_mapper.ipynb
+++ b/test_mapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5.48 s, sys: 490 ms, total: 5.97 s\n",
+      "Wall time: 5.98 s\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -92,12 +100,13 @@
        "4  06a5b648-0950-4892-a975-715291a5de6f  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
     "df = io.load_path_file('random_file_paths.txt', drop_subset = ['recording_MBID', 'artist_MBID'])\n",
     "df.drop(['release_MBID'], axis = 1, inplace = True)\n",
     "df.drop_duplicates(['artist_MBID', 'recording_MBID'], inplace = True)\n",
@@ -109,15 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 41.1 s, sys: 14.5 s, total: 55.6 s\n",
-      "Wall time: 50.8 s\n"
+      "CPU times: user 23.6 s, sys: 8.87 s, total: 32.5 s\n",
+      "Wall time: 28.2 s\n"
      ]
     }
    ],
@@ -141,127 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rec_name</th>\n",
-       "      <th>artist_credit</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rec_gid</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>ceb174fd-1281-45f4-a0e7-a08f2d2bfc25</th>\n",
-       "      <td>Playboy Mommy</td>\n",
-       "      <td>Tori Amos</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9869027b-0076-42e2-9675-f5bcc3a55fcb</th>\n",
-       "      <td>On a Slow Boat to China</td>\n",
-       "      <td>Bing Crosby</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0bb80970-1548-417f-92e0-3812d752d0d4</th>\n",
-       "      <td>If I Knew You Were Comin' I'd've Baked a Cake</td>\n",
-       "      <td>Bing Crosby</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3277d4d3-784f-4006-b9c3-debee7e0f2f5</th>\n",
-       "      <td>Zip A Dee Doo Dah</td>\n",
-       "      <td>Bing Crosby</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78e3d13c-d52a-4ca6-aec5-0e2cdcf27551</th>\n",
-       "      <td>You Gotta Start Off Each Day With a Song</td>\n",
-       "      <td>Bing Crosby</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                           rec_name  \\\n",
-       "rec_gid                                                                               \n",
-       "ceb174fd-1281-45f4-a0e7-a08f2d2bfc25                                  Playboy Mommy   \n",
-       "9869027b-0076-42e2-9675-f5bcc3a55fcb                        On a Slow Boat to China   \n",
-       "0bb80970-1548-417f-92e0-3812d752d0d4  If I Knew You Were Comin' I'd've Baked a Cake   \n",
-       "3277d4d3-784f-4006-b9c3-debee7e0f2f5                              Zip A Dee Doo Dah   \n",
-       "78e3d13c-d52a-4ca6-aec5-0e2cdcf27551       You Gotta Start Off Each Day With a Song   \n",
-       "\n",
-       "                                     artist_credit  \n",
-       "rec_gid                                             \n",
-       "ceb174fd-1281-45f4-a0e7-a08f2d2bfc25     Tori Amos  \n",
-       "9869027b-0076-42e2-9675-f5bcc3a55fcb   Bing Crosby  \n",
-       "0bb80970-1548-417f-92e0-3812d752d0d4   Bing Crosby  \n",
-       "3277d4d3-784f-4006-b9c3-debee7e0f2f5   Bing Crosby  \n",
-       "78e3d13c-d52a-4ca6-aec5-0e2cdcf27551   Bing Crosby  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MB_artist_credit_list.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def replace(value, lookup_df, col_name):\n",
-    "# applyping function for replacing values.\n",
-    "    try:\n",
-    "        return lookup_df.at[value, col_name]\n",
-    "    except KeyError:\n",
-    "        return value\n",
-    "\n",
-    "def replace_multi(value, lookup_df):\n",
-    "    try:\n",
-    "        return tuple(replace(value, lookup_df, col_name) for col_name in lookup_df.columns)\n",
-    "    except KeyError:\n",
-    "        return tuple(None for col_name in lookup_df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.29 s, sys: 4.1 ms, total: 8.29 s\n",
-      "Wall time: 8.3 s\n"
+      "CPU times: user 8.67 s, sys: 11.5 ms, total: 8.68 s\n",
+      "Wall time: 8.69 s\n"
      ]
     },
     {
@@ -366,7 +263,7 @@
        "4          Penny & Me           Hanson  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,30 +272,28 @@
     "%%time\n",
     "### mlhd_recording_mbid ###\n",
     "\n",
-    "df['mlhd_canonical_mbid'] = df['mlhd_recording_mbid'].map(lambda x: replace(x, MB_rec_redirects, 'new'))\n",
-    "df['mlhd_canonical_mbid'] = df['mlhd_canonical_mbid'].map(lambda x: replace(x, MB_rec_canonical, 'new'))\n",
+    "df['mlhd_canonical_mbid'] = df['mlhd_recording_mbid'].map(lambda x: io.replace(x, MB_rec_redirects, 'new'))\n",
+    "df['mlhd_canonical_mbid'] = df['mlhd_canonical_mbid'].map(lambda x: io.replace(x, MB_rec_canonical, 'new'))\n",
     "# df['recording_name'] = df['mlhd_canonical_mbid'].map(lambda x: replace(x, MB_rec_names, 'name'))\n",
     "\n",
-    "rec_name_artist_credit = df['mlhd_canonical_mbid'].map(lambda x: replace_multi(x, MB_artist_credit_list))\n",
+    "rec_name_artist_credit = df['mlhd_canonical_mbid'].map(lambda x: io.replace_multi(x, MB_artist_credit_list))\n",
     "df['rec_name'], df['artist_credit'] = zip(*rec_name_artist_credit)\n",
+    "\n",
+    "df.dropna(subset = ['rec_name', 'artist_credit'], inplace=True)\n",
     "\n",
     "df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df.dropna(subset = ['rec_name', 'artist_credit'], inplace=True)"
+    "# Conflation mapping"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
