--- a/test_mapper.ipynb
+++ b/test_mapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,17 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('warehouse/mlhd_artist_credits.csv')\n",
+    "df = pd.read_csv('warehouse/mapper_outputs/mlhd_artist_credits.csv')\n",
     "test_df = df[:50]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,15 +431,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 104 ms, sys: 4.32 ms, total: 108 ms\n",
-      "Wall time: 124 ms\n"
+      "CPU times: user 1.18 s, sys: 114 ms, total: 1.3 s\n",
+      "Wall time: 1min 2s\n"
      ]
     },
     {
@@ -550,7 +550,7 @@
        "4          Penny & Me           Hanson  a2a800b4-4969-4bc6-88e9-6928b973890c  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,15 +564,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.24 s, sys: 96.3 ms, total: 1.34 s\n",
-      "Wall time: 9.34 s\n"
+      "CPU times: user 1.19 s, sys: 107 ms, total: 1.3 s\n",
+      "Wall time: 8.93 s\n"
      ]
     },
     {
@@ -683,7 +683,7 @@
        "4          Penny & Me           Hanson  a2a800b4-4969-4bc6-88e9-6928b973890c  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>106 rows × 2 columns</p>\n",
+       "<p>107 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -819,10 +819,10 @@
        "990  217c4f4a-d6d1-44db-9581-4cc83b738446  \n",
        "994                                   NaN  \n",
        "\n",
-       "[106 rows x 2 columns]"
+       "[107 rows x 2 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -865,15 +865,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "from jinja2 import Environment, BaseLoader\n",
     "jenv = Environment(loader=BaseLoader)\n",
     "from IPython.display import display, HTML\n",
-    "\n",
-    "template = \"\"\"\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_html(df, base_path='/home/snaek/public_html/', suffix='mbc'):\n",
+    "    template = \"\"\"\n",
     "<table>\n",
     "<tr><th>Artist</th><th>Recording</th><th>Canonical MBID</th><th>Canonical Data Lookup</th></tr>\n",
     "{% for key,value in df.iterrows() %}\n",
@@ -885,8 +894,25 @@
     "</tr>\n",
     "{% endfor %}\n",
     "</table>\n",
-    "\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "    f_name = \"mlhd-lookup-{}-{}.html\".format(datetime.now().strftime(\"%y-%m-%d\"), suffix)\n",
+    "    jtemplate = jenv.from_string(template)\n",
+    "    different = df[df.mlhd_canonical_mbid!=df.received_rec_mbid]\n",
+    "    report_html = jtemplate.render(df=different)\n",
+    "    \n",
+    "    print\n",
+    "    with open(base_path+f_name, \"w\", encoding=\"utf-8\") as fp:\n",
+    "        fp.write(report_html) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_html(test_run_mbc, suffix='mbc')\n",
+    "write_html(test_run_mapper, suffix='mbid-mapper')"
    ]
   },
   {
@@ -895,13 +921,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jtemplate = jenv.from_string(template)\n",
+    "# jtemplate = jenv.from_string(template)\n",
     "\n",
-    "different = test_run_mbc[test_run_mbc.mlhd_canonical_mbid!=test_run_mbc.received_rec_mbid]\n",
+    "# different = test_run_mbc[test_run_mbc.mlhd_canonical_mbid!=test_run_mbc.received_rec_mbid]\n",
     "\n",
-    "report_html = jtemplate.render(df=different)\n",
-    "with open(\"/home/snaek/public_html/mlhd-lookup-2022-07-25-mbc.html\", \"w\", encoding=\"utf-8\") as fp:\n",
-    "    fp.write(report_html)"
+    "# report_html = jtemplate.render(df=different)\n",
+    "# with open(\"/home/snaek/public_html/mlhd-lookup-2022-07-25-mbc.html\", \"w\", encoding=\"utf-8\") as fp:\n",
+    "#     fp.write(report_html)"
    ]
   },
   {
@@ -910,13 +936,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jtemplate = jenv.from_string(template)\n",
+    "# jtemplate = jenv.from_string(template)\n",
     "\n",
-    "different = test_run_mbc[test_run_mbc.mlhd_canonical_mbid!=test_run_mbc.received_rec_mbid]\n",
+    "# different = test_run_mbc[test_run_mbc.mlhd_canonical_mbid!=test_run_mbc.received_rec_mbid]\n",
     "\n",
-    "report_html = jtemplate.render(df=different)\n",
-    "with open(\"/home/snaek/public_html/mlhd-lookup-2022-07-25-mbid_mapper.html\", \"w\", encoding=\"utf-8\") as fp:\n",
-    "    fp.write(report_html)"
+    "# report_html = jtemplate.render(df=different)\n",
+    "# with open(\"/home/snaek/public_html/mlhd-lookup-2022-07-25-mbid_mapper.html\", \"w\", encoding=\"utf-8\") as fp:\n",
+    "#     fp.write(report_html)"
    ]
   }
  ],
