added comments to time consumption breakdown

--- a/test_clean_master.ipynb
+++ b/test_clean_master.ipynb
@@ -447,6 +447,7 @@
     }
    ],
    "source": [
+    "# Duplicating dataframe for repeatability\n",
     "processed = df.copy()\n",
     "processed"
    ]
@@ -632,6 +633,7 @@
    "source": [
     "%%time\n",
     "\n",
+    "# 1. Get redirects for MBIDs that aren't present in rec_gid_set using MB_rec_redirects.\n",
     "processed['recording_MBID'] = processed.recording_MBID.map(\n",
     "    lambda x: io.replace(x, MB_rec_redirects, 'new') \n",
     "    if x not in rec_gid_set else x)\n",
@@ -813,6 +815,7 @@
    "source": [
     "%%time\n",
     "\n",
+    "# 2. Find canonical recordings for all cleaned/uncleaned recording_MBIDs\n",
     "processed['recording_MBID'] = processed['recording_MBID'].map(\n",
     "    lambda x: io.replace(x, MB_rec_canonical, 'new')\n",
     "    if io.replace(x, MB_rec_canonical, 'new') is not nan else x)\n",
@@ -837,6 +840,7 @@
    "source": [
     "%%time\n",
     "\n",
+    "# 3. Fetch artist, release_MBIDs for all recording_MBIDs\n",
     "artist_release_mbids = processed['recording_MBID'].map(\n",
     "    lambda x: io.replace_multi(x, MB_artist_credit_list))"
    ]
@@ -858,6 +862,7 @@
    "source": [
     "%%time\n",
     "\n",
+    "# Vectorized method to map tupes of artist_MBID and release_MBID to their respective columns\n",
     "processed[['artist_MBID', 'release_MBID']] = pd.DataFrame(\n",
     "    artist_release_mbids.tolist(), \n",
     "    columns = ['artist_MBID', 'release_MBID'], \n",
