--- a/test_MLHD_conflation_mapping.ipynb
+++ b/test_MLHD_conflation_mapping.ipynb
@@ -844,7 +844,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('env_mlhd': venv)",
+   "display_name": "Python 3.8.10 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -863,7 +863,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a2c0c9fb1c567002394a71a6ae02f73ce4bc53d4b82f846c3c881e337285b81f"
+    "hash": "99207027a3abb1e120e2013d5a83e642456faefc5cbc1acefa0d682e37a8f4b0"
    }
   }
  },
