--- a/test_isin.ipynb
+++ b/test_isin.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7520552c",
+   "metadata": {},
+   "source": [
+    "This notebook compares the performance between pandas.Series.isin() function and a custom function using Python sets and pandas apply function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "735c8727",
    "metadata": {},
    "outputs": [
@@ -20,8 +28,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.78 s, sys: 3.55 s, total: 12.3 s\n",
-      "Wall time: 12.2 s\n"
+      "CPU times: user 9.38 s, sys: 4 s, total: 13.4 s\n",
+      "Wall time: 13.3 s\n"
      ]
     }
    ],
@@ -33,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "8e28bab9",
    "metadata": {},
    "outputs": [
@@ -190,7 +198,7 @@
        "[4738139 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "e79f1955",
    "metadata": {},
    "outputs": [
@@ -218,8 +226,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.1 s, sys: 448 ms, total: 11.6 s\n",
-      "Wall time: 11.5 s\n"
+      "CPU times: user 12.6 s, sys: 528 ms, total: 13.1 s\n",
+      "Wall time: 13 s\n"
      ]
     },
     {
@@ -375,7 +383,7 @@
        "[2566274 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,12 +399,12 @@
    "id": "2d672685",
    "metadata": {},
    "source": [
-    "# Method 2: Using sets and Queries"
+    "# Method 2: Using sets and for loop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "3eea8b01",
    "metadata": {},
    "outputs": [
@@ -404,8 +412,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.77 s, sys: 682 ms, total: 6.45 s\n",
-      "Wall time: 6.39 s\n"
+      "CPU times: user 6 s, sys: 594 ms, total: 6.59 s\n",
+      "Wall time: 6.53 s\n"
      ]
     }
    ],
@@ -416,7 +424,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
+   "id": "68091538",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 997 ms, sys: 14.6 ms, total: 1.01 s\n",
+      "Wall time: 1.01 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "boolean_map = []\n",
+    "for mbid in df.recording_MBID:\n",
+    "    boolean_map.append(mbid in rec_gid_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c088639",
+   "metadata": {},
+   "source": [
+    "# Method 3: Using sets and apply function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "36b3d181",
    "metadata": {},
    "outputs": [
@@ -424,8 +462,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 995 ms, sys: 43.6 ms, total: 1.04 s\n",
-      "Wall time: 1.04 s\n"
+      "CPU times: user 970 ms, sys: 61.2 ms, total: 1.03 s\n",
+      "Wall time: 1.03 s\n"
      ]
     },
     {
@@ -581,14 +619,14 @@
        "[2566274 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "df[df.recording_MBID.map(lambda x: x in rec_gid_set)]"
+    "df[df.recording_MBID.apply(lambda x: x in rec_gid_set)]"
    ]
   }
  ],
