--- a/test_mapper.ipynb
+++ b/test_mapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,97 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 5.48 s, sys: 490 ms, total: 5.97 s\n",
-      "Wall time: 5.98 s\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'random_file_paths.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:1\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "File \u001b[0;32m~/MLHD_repo_test/MLHD/lib/io_.py:127\u001b[0m, in \u001b[0;36mload_path_file\u001b[0;34m(paths, how_many, drop_subset)\u001b[0m\n\u001b[1;32m    122\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[39mInput: List of paths to files or text file with paths on each line.\u001b[39;00m\n\u001b[1;32m    124\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    125\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(paths, \u001b[39mlist\u001b[39m):\n\u001b[1;32m    126\u001b[0m     \u001b[39m# Open a file with MLHD file paths to process\u001b[39;00m\n\u001b[0;32m--> 127\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(paths, \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    128\u001b[0m         file_paths \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mreadlines()\n\u001b[1;32m    129\u001b[0m         file_paths\u001b[39m=\u001b[39m [item\u001b[39m.\u001b[39mstrip() \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m file_paths]\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'random_file_paths.txt'"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>mlhd_artist_mbid</th>\n",
-       "      <th>mlhd_recording_mbid</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1108412731</td>\n",
-       "      <td>f4a31f0a-51dd-4fa7-986d-3095c40c5ed9</td>\n",
-       "      <td>1deb956c-5439-4fbb-b026-5adb4330a934</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1108422818</td>\n",
-       "      <td>db999c3f-f243-4a5f-88d6-0c25243b6661</td>\n",
-       "      <td>14e9eb4e-155d-46ff-9a83-a8d5e1936c81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1108423325</td>\n",
-       "      <td>ce58d854-7430-4231-aa44-97f0144b3372</td>\n",
-       "      <td>eced9a9b-cd59-40f8-a580-f27094bd8a89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1108594566</td>\n",
-       "      <td>e6e879c0-3d56-4f12-b3c5-3ce459661a8e</td>\n",
-       "      <td>0a8e9fce-b54c-45dd-8081-4aaa654ef4ec</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1108679759</td>\n",
-       "      <td>3c0a0074-4f26-4d3b-b723-a66bf6cc3753</td>\n",
-       "      <td>06a5b648-0950-4892-a975-715291a5de6f</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    timestamp                      mlhd_artist_mbid  \\\n",
-       "0  1108412731  f4a31f0a-51dd-4fa7-986d-3095c40c5ed9   \n",
-       "1  1108422818  db999c3f-f243-4a5f-88d6-0c25243b6661   \n",
-       "2  1108423325  ce58d854-7430-4231-aa44-97f0144b3372   \n",
-       "3  1108594566  e6e879c0-3d56-4f12-b3c5-3ce459661a8e   \n",
-       "4  1108679759  3c0a0074-4f26-4d3b-b723-a66bf6cc3753   \n",
-       "\n",
-       "                    mlhd_recording_mbid  \n",
-       "0  1deb956c-5439-4fbb-b026-5adb4330a934  \n",
-       "1  14e9eb4e-155d-46ff-9a83-a8d5e1936c81  \n",
-       "2  eced9a9b-cd59-40f8-a580-f27094bd8a89  \n",
-       "3  0a8e9fce-b54c-45dd-8081-4aaa654ef4ec  \n",
-       "4  06a5b648-0950-4892-a975-715291a5de6f  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -948,7 +871,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('env_mlhd': venv)",
+   "display_name": "Python 3.8.10 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -967,7 +890,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a2c0c9fb1c567002394a71a6ae02f73ce4bc53d4b82f846c3c881e337285b81f"
+    "hash": "99207027a3abb1e120e2013d5a83e642456faefc5cbc1acefa0d682e37a8f4b0"
    }
   }
  },
