--- a/test_MLHD_old.ipynb
+++ b/test_MLHD_old.ipynb
@@ -1739,11 +1739,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "a2c0c9fb1c567002394a71a6ae02f73ce4bc53d4b82f846c3c881e337285b81f"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('env_mlhd': venv)",
+   "display_name": "Python 3.8.10 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1759,7 +1756,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "99207027a3abb1e120e2013d5a83e642456faefc5cbc1acefa0d682e37a8f4b0"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
